--- a/assets/css/_main_unminify.css
+++ b/assets/css/_main_unminify.css
@@ -1180,7 +1180,7 @@ hr {
 	top: 0;
 	width: 100%;
 	height: 2px;
-	background: #FFF;
+	background: #c0c0c7;
 	transition: all 0.3s cubic-bezier(0.3, 0, 0.3, 1);
 	-moz-transition: all 0.3s cubic-bezier(0.3, 0, 0.3, 1);
 	-webkit-transition: all 0.3s cubic-bezier(0.3, 0, 0.3, 1);
@@ -5690,24 +5690,36 @@ h2.about{margin-top:-50px;}
 		bottom: 20px;
 		right: 20px;
 		display: none;
-		z-index: 109;
+		z-index: 3;
 		border:none;
 		background: none;
 		display: inline-block;
 	  }
-	  #btn-back-to-top svg{	
-		width: 36px;
-		height: 36px;
-		display: inline-block;
-		opacity: 50%;
-	}  
 
-	#btn-back-to-top svg path:hover {
-		fill:#fafafa;
-		opacity: 100%;
+
+	#btn-back-to-top svg:hover {
+		opacity: 70%;
+		margin-top:5px;
 		transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
 		-webkit-transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
 	}
+
+	
+	#btn-back-to-top svg:active {
+		opacity: 100%;
+	}
+
+	#btn-back-to-top svg:visited {
+		opacity: 30%;
+	}
+
+	#btn-back-to-top svg{	
+		fill:#5c5c5c; 
+		width: 40px;
+		height: 40px;
+		display: inline-block;
+		opacity: 30%;
+	}  
 
 
 	@media only screen and (max-width: 767px) {
@@ -5717,4 +5729,20 @@ h2.about{margin-top:-50px;}
 			display: none;
 		  }
 
+		  #btn-back-to-top svg{	
+			opacity: 30%;
+		}  
+
+	}
+	.icon-linkedin:before{color:#c0c0c7;}
+	.icon-instagram:before{color:#c0c0c7;}
+	.icon-linkedin:hover:before{
+		color:#fff;
+		transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
+		-webkit-transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
+	}
+	.icon-instagram:hover:before{
+		color:#fff;
+		transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
+		-webkit-transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
 	}
